<resources xmlns:xliif="urn:oasis:names:tc:xliff:document:1.2">
    <plurals name="numberOfSongsAvailable">
        <item quantity="one">%d song found</item>
        <item quantity="other">%d song found</item>
    </plurals>
    <string name="app_name">MyLocalization2</string>
    <string name="football">Indonesia National Team win against Thailand National Team</string>
    <string name="goal">Goal from Indonesia scored by %1$s and %2$s, so the final score is %3$d - %4$d for Indonesia victory </string>
    <string name="app_homeurl">
        <xliif:g id="homepage">https://www.polines.ac.id</xliif:g>
    </string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="tab_text1">Home</string>
    <string name="tab_text2">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_name">Name</string>
    <string name="address">Address</string>
    <string name="hobby">Hobby</string>
    <string name="quotes">Quote</string>
    <string name="quotes1">Thinking Positive</string>
    <string name="hobby1">Watching</string>
</resources>