<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/imgProfilnya"
            android:src="@drawable/nabiilah"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txtTitleName"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title_name"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:text=" : "
                    android:textColor="@android:color/black"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Laila Nabiilah"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txtTitleAddress"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:text=" : "
                    android:textColor="@android:color/black"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Lampung"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txtTitleHobby"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hobby"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:text=" : "
                    android:textColor="@android:color/black"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hobby1"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txtTitleQuote"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/quotes"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:text=" : "
                    android:textColor="@android:color/black"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quotes1"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>